--- a/frontTCinema/package.json
+++ b/frontTCinema/package.json
@@ -12,18 +12,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.6",
-    "@angular/cdk": "^6.4.7",
     "@angular/common": "^2.3.1",
     "@angular/compiler": "^2.3.1",
     "@angular/core": "^2.3.1",
     "@angular/forms": "^2.3.1",
     "@angular/http": "^2.3.1",
-    "@angular/material": "^6.4.7",
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
-    "angular2-flash-messages": "^3.0.1",
+    "angular2-flash-messages": "^1.0.8",
+    "angular2-jwt": "^0.2.3",
     "core-js": "^2.4.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
