--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "School project about creating seats reservation system for cinema using Node.js, Express.js, Angular, MongoDB",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node index.js"
   },
   "repository": {
     "type": "git",
