--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
     "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
+    "@angular/cli": "^7.0.2",
     "nodemon": "^1.18.4"
   }
 }
